--- a/scss/_date-section.scss
+++ b/scss/_date-section.scss
@@ -4,13 +4,13 @@
     flex-wrap: wrap;
     padding: 50px 15px;
     margin: 0 auto;
+    font-family: "Poppins", sans-serif;
     &__header {
         font-size: 20px;
         text-align: center;
         padding-bottom: 35px;
     }
     &__date {
-        font-family: "Alex Brush", cursive;
         font-size: 38px;
     }
     &__description {
@@ -24,16 +24,19 @@
         max-width: 500px;
     }
     &__item {
-        position: relative;
-        flex-direction: column;
-        display: flex;
-        margin-top: 15px;
         width: 200px;
         height: 200px;
-        justify-content: center;
+        position: relative;
+        display: flex;
+        flex-direction: column;
         flex-wrap: wrap;
-        box-shadow: 1px 1px 3px #ccc;
+        justify-content: center;
+        margin-top: 15px;
+        box-shadow: inset 0 0 10px #888;
+        border-radius: 15px;
         &::before {
+            box-shadow: 0 0 10px #888;
+            border-radius: 15px;
             content: "";
             height: 50%;
             width: 50%;
@@ -53,7 +56,6 @@
         font-size: 24px;
     }
     &__number {
-        color: #70a076;
         font-weight: bold;
         font-size: 42px;
     }
