--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,6 @@
-// Just a comment
+@import "_variables.scss";
+@import "_mixins.scss";
+
 @import "_main-styles.scss";
 @import "_header.scss";
 @import "_main-page.scss";
