--- a/scss/_gallery.scss
+++ b/scss/_gallery.scss
@@ -1,7 +1,7 @@
 .gallery {
     position: relative;
-    box-shadow: 0 0 2px black;
-    z-index: 1;
+    // box-shadow: 0 0 2px black;
+    // z-index: 1;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 15px;
