--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,10 +1,11 @@
-@import "_variables.scss";
-@import "_mixins.scss";
+@import "variables";
+@import "mixins";
 
-@import "_main-styles.scss";
-@import "_header.scss";
-@import "_main-page.scss";
-@import "_date-section.scss";
-@import "_newlyweds";
-@import "_gallery.scss";
-@import "_helpful-information";
+@import "main-styles";
+@import "header";
+@import "main-page";
+@import "date-section";
+@import "newlyweds";
+@import "gallery";
+@import "helpful-information";
+@import "story";
