added separator, map section, contact form

--- a/scss/_main-page.scss
+++ b/scss/_main-page.scss
@@ -11,6 +11,7 @@
     font-family: "Alex Brush", cursive;
     text-align: center;
     text-shadow: 0 0 3px 2px black;
+    box-shadow: inset 0 0 10px #888;
 
     &__text-box {
         width: 100vw;
