--- a/scss/_helpful-information.scss
+++ b/scss/_helpful-information.scss
@@ -1,7 +1,8 @@
 .helpful-information {
-    background-image: url(../img/paper-flower-main-page_640.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
+    &__title {
+        text-align: center;
+        font-size: 18px;
+        margin-top: 15px;
+        padding: 5px;
+    }
 }
